--- a/parallel_code/Makefile
+++ b/parallel_code/Makefile
@@ -2,13 +2,13 @@ CC = mpicc
 CFLAGS = -O2
 LDFLAGS = -L../simple-jpeg/ -lsimplejpeg
 
-PROJ = parallel_main
-OBJS = parallel_main.o parallel_f.o
+PROJ = main
+OBJS = main.o functions.o
 
 all: simple-jpeg $(PROJ)
 
-parallel_main: $(OBJS)
-	$(CC) $(CFLAGS) $< parallel_f.c -o $@ $(LDFLAGS)
+main: $(OBJS)
+	$(CC) $(CFLAGS) $< functions.c -o $@ $(LDFLAGS)
 
 simple-jpeg:
 	$(MAKE) -C ../simple-jpeg
